fix(list): dense lists cut off descenders of letters like gjqpy
update demo to include letters with descenders
fix demo layout on mobile

Fixes #8890

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,6 +1,6 @@
 $dense-baseline-grid: $baseline-grid / 2 !default;
 
-$list-h3-margin: 0 0 0px 0 !default;
+$list-h3-margin: 0 0 0 0 !default;
 $list-h4-margin: 3px 0 1px 0 !default;
 $list-h4-font-weight: 400 !default;
 $list-header-line-height: 1.2em !default;
@@ -56,7 +56,7 @@ md-list {
         @include ie11-min-height-flexbug($list-item-dense-height);
 
 
-        // Layout for controls in primary or secondary divs, or auto-infered first child
+        // Layout for controls in primary or secondary divs, or auto-inferred first child
 
         md-icon:first-child {
           width: $list-item-dense-primary-icon-width;
@@ -89,6 +89,7 @@ md-list {
             p {
               line-height: $list-item-dense-line-height;
               font-size: $list-item-dense-font-size;
+              padding-bottom: 4px;
             }
 
             h3 {
